# RandomCoffeeBot

./: .coveragerc  .dockerignore  .env.dev  .env.example  .env.prod.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .snyk  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  COMMIT_HISTORY_IMPROVEMENT.md  COVERAGE_REPORT.md  FIXES_APPLIED.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_SHORT.md  Makefile  README.md  RECOMMENDATIONS_COMPLETED.md  SECURITY.md  TESTING.md  TEST_DATABASE_SETUP.md  TEST_INFRASTRUCTURE_COMPLETE.md  TOPICS_DESIGN.md  commit-message-editor.sh  coverage.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  rebase-editor.sh  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
alembic/: env.py
alembic/versions/: 0d5634e788ff_add_feedback_constraints_and_match_tz.py  10f6fb89b5be_add_random_coffee_models.py  259d75ae216a_add_unique_constraint_to_registrations.py  593b418977d7_add_optimized_indices.py  59511cf87b92_add_user3_id_to_matches.py  5ce5de139a6b_remove_user_level_column.py  8b9ad2733ab5_fix_session_dates_timezone.py  99bfa2094c82_add_performance_indices.py  a1b2c3d4e5f6_add_unique_constraint_on_session_date.py  b2c3d4e5f6a7_add_notifications_sent_at_to_sessions.py  c7f3d89a7b1c_drop_redundant_indexes.py  ca2690e7165d_add_unique_constraint_and_timezone.py  efed37957c63_add_status_indices.py
app/: __init__.py  bot.py  config.py  constants.py  main.py  scheduler.py
app/api/v1/: health.py  router.py
app/bot/: __init__.py
app/bot/handlers/: __init__.py  commands.py  feedback.py  matches.py  reactions.py  registration.py  start.py
app/bot/keyboards/: __init__.py  inline.py
app/bot/middlewares/: __init__.py  database.py  throttling.py
app/bot/states/: __init__.py  feedback.py  registration.py
app/db/: base.py  session.py
app/models/: __init__.py  enums.py  feedback.py  match.py  registration.py  session.py  topic.py  user.py
app/repositories/: __init__.py  base.py  feedback.py  match.py  protocols.py  registration.py  session.py  topic.py  user.py
app/resources/: __init__.py  messages.py
app/schemas/: __init__.py  callbacks.py
app/services/: __init__.py  announcements.py  helpers.py  matching.py  notifications.py  sessions.py  users.py
app/utils/: __init__.py  context.py  logging.py  retry.py  user_formatting.py
app/workers/: celery_app.py
app/workers/tasks/: __init__.py
deploy/traefik/dynamic/: config.yml
docker/: Dockerfile  entrypoint.sh  healthcheck.py
docs/: MANUAL_TESTING.md  TOPICS_DESIGN.md
scripts/: seed_topics.py  test_run.py
tests/: ASYNC_MOCKING_EXPLANATION.md  README.md  TEST_DATABASE.md  TEST_STRUCTURE.md  conftest.py
tests/integration/: test_e2e_flow.py  test_helpers.py  test_matching.py  test_sessions.py
tests/unit/: test_announcements_mocked.py  test_config.py  test_db_session.py  test_helpers_mocked.py  test_matching_functions.py  test_notifications_mocked.py  test_reactions_handler.py  test_scheduler.py  test_schemas_callbacks.py  test_sessions_mocked.py  test_utils_context.py  test_utils_retry.py
