[project]
name = "randomcoffeebot"
version = "0.1.0"
description = "A FastAPI-based bot for organizing random coffee meetings"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Telegram
    "aiogram>=3.23.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",

    # Cache & Queue
    "redis>=7.1.0",
    "celery>=5.6.0",

    # Configuration
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",

    # Monitoring
    "flower>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
