[project]
name = "randomcoffeebot"
version = "0.1.0"
description = "Telegram bot for organizing random coffee meetings"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "aiofiles>=23.2.1",
    "redis>=5.0.0",
    "python-json-logger>=3.2.0",
    "tenacity>=9.0.0",
    "types-redis>=4.6.0.20241004",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "mypy>=1.15.0",
    "types-aiofiles>=25.1.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "apscheduler.*",
    "pydantic_settings.*",
    "pythonjsonlogger.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
]
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = [
    "alembic.versions.*",
    "app.bot.middlewares.throttling",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.services.helpers",
    "app.services.sessions",
    "app.utils.retry",
]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "app.bot.handlers.*",
]
disable_error_code = ["union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "app.services.matching",
]
disable_error_code = ["arg-type"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-json-logger>=4.0.0",
    "types-aiofiles>=25.1.0.20251011",
]
